impaginazione sommaria + inizio header

--- a/index.html
+++ b/index.html
@@ -13,7 +13,145 @@
 </head>
 
 <body>
+    <header>
+        <h1>Discord</h1>
+        <nav>
+            <div class="container dFlex">
+                <img src="./img/logo.svg" alt="logo">
+                <ul class="dFlex">
+                    <li class="navItems">Scarica</li>
+                    <li class="navItems">Perché Discord</li>
+                    <li class="navItems">Nitro</li>
+                    <li class="navItems">Sicurezza</li>
+                    <li class="navItems">Assistenza</li>
+                </ul>
+                <span class="dFlex bgHeaderButton">
+                    <a href="accedi.html">Accedi</a>
+                </span>
+            </div>
+        </nav>
+        <section class="hero">
+            <div class="dFlexCenter containerSmall">
+                <h2>Il tuo posto per parlare</h2>
+                <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o
+                    semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più
+                    facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
+            </div>
+            <span class="dFlexCenter bgHeaderButton containerSmall">
+                <a href="">Scarica per Mac</a>
+            </span>
+            <span class="dFlexCenter bgHeaderDarkButton containerSmall">
+                <a href="">Apri Discord nel tuo browser</a>
+            </span>
+        </section>
+    </header>
+    <main>
+        <section>
+            <span>
+                <img src="" alt="">
+            </span>
+            <div>
+                <h3></h3>
+                <p></p>
+            </div>
+        </section>
+        <section>
+            <span>
+                <img src="" alt="">
+            </span>
+            <div>
+                <h3></h3>
+                <p></p>
+            </div>
+        </section>
+        <section>
+            <span>
+                <img src="" alt="">
+            </span>
+            <div>
+                <h3></h3>
+                <p></p>
+            </div>
+        </section>
+        <section>
+            <div>
+                <h3></h3>
+                <p></p>
+            </div>
+            <span>
+                <img src="" alt="">
+            </span>
+            <div>
+                <h4></h4>
+                <div><a href=""></a></div>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div>
+            <h4></h4>
+            <span>
+                <img src="" alt="">
+                <select name="" id=""></select>
+            </span>
+            <span>
+                <img src="" alt="">
+            </span>
+            <span>
+                <img src="" alt="">
+            </span>
+            <span>
+                <img src="" alt="">
+            </span>
+            <span>
+                <img src="" alt="">
+            </span>
+            <h6></h6>
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
 
+            <h6></h6>
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+
+            <h6></h6>
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+
+            <h6></h6>
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
+        <div>
+            <img src="" alt="">
+            <span><a href=""></a></span>
+        </div>
+    </footer>
 </body>
 
 </html>
