--- a/index.html
+++ b/index.html
@@ -37,12 +37,10 @@
                     semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più
                     facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
             </div>
-            <span class="dFlexCenter bgHeaderButton containerSmall">
-                <a href="">Scarica per Mac</a>
-            </span>
-            <span class="dFlexCenter bgHeaderDarkButton containerSmall">
-                <a href="">Apri Discord nel tuo browser</a>
-            </span>
+            <div class="dFlexCenter">
+                    <a class="bgHeaderButton" href="">Scarica per Mac</a>
+                    <a class="bgHeaderDarkButton" href="">Apri Discord nel tuo browser</a>
+            </div>
         </section>
     </header>
     <main>
